Fix alignment of close cross on mentor notes modal

--- a/app/assets/stylesheets/pages/mentor-exercise-notes.scss
+++ b/app/assets/stylesheets/pages/mentor-exercise-notes.scss
@@ -94,7 +94,7 @@ body.namespace-mentor.controller-exercise_notes.action-show {
         background:$color-1;
         color:#fff;
         i {
-            line-height:60px;
+            line-height:30px;
         }
     }
 }
